# bevy_state_macros

./: Cargo.toml  README.md
examples/: menu.rs  simple.rs
src/: lib.rs  state.rs
tests/: no_macro.rs  simple.rs
