[package]
name = "bevy_state_macros"
description = "Macros to allow bevy systems for states with attributes."
version = "0.2.0"
authors = ["Martin Trumann <martin.trumann@pm.me>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/martintrumann/bevy_state_macros"

[lib]
proc-macro = true

[dependencies]
bevy_app = "0.8"
bevy_ecs = "0.8"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }

[dev-dependencies]
bevy = "0.8"
